$Id$

Changes between 0.1.7 and 1.0.0:
--------------------------------

  * Relicense libdvbpsi from GPLv2 to LGPLv2.1
  * new CUE Identifier descriptor support (0x8a)
  * new Splice Information Section table support (0xFC) (SCTE 35 2004)
  * new BAT table (decoder and generator)
  * new descriptor 0x44

Changes between 0.1.6 and 0.1.7:
--------------------------------

  * new VBI data descriptor support (0x45)
  * NIT support
  * TOT/TDT support
  * new DVB Satellite Delivery systems descriptor support (0x43)
  * new DVB Local time offset descriptor support (0x58)
  * new Terrestrial Delivery systems descriptor support (0x5a)

Changes between 0.1.5 and 0.1.6:
--------------------------------

  * fixed a parsing bug due to outdated spec in ISO 639 language descriptor
  * fixed the use of uninitialized data when section_syntax_indicator=0
  * fixed a parsing bug in the EBU teletext descriptor decoder
  * fixed the declaration of dvbpsi_DecodeTeletextDr
  * new example tool for checking an MPEG-2 TS file
  * fixed EIT discontinuities
  * new cat support
  * new PDC support descriptor 0x69

Changes between 0.1.4 and 0.1.5:
--------------------------------

  * Windows CE port
  * src/tables/eit*: EIT decoder (no generator yet)
  * src/tables/sdt*: SDT generator
  * 0x4d/0x4e (EIT) descriptors decoders
  * 0x52 (stream identifier) descriptor decoder
  * 0x55 (dvb parental rating) descriptor decoder
  * 0x56 (EBU teletext) descriptor decoder
  * fixed a segfault in the subtitles descriptor decoder
  * correctly handle duplicate packets
  * correctly handle TS packets containing multiple PSI sections

Changes between 0.1.3 and 0.1.4:
--------------------------------

  * 0x59 (dvb subtitles) descriptor decoder
  * memory leak fix
  * fixed an unitialiazed pointer

Changes between 0.1.2 and 0.1.3:
--------------------------------

  * fixed segfault with invalid/corrupted psi data
  * update spec file
  * src/descriptors/*: fixed some typos